<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <parent>
    <artifactId>weasis-dicom-parent</artifactId>
    <groupId>org.weasis.dicom</groupId>
    <!--suppress MavenPropertyInParent -->
    <version>${revision}${changelist}</version>
    <relativePath>../weasis-dicom-parent/pom.xml</relativePath>
  </parent>
  <modelVersion>4.0.0</modelVersion>
  <artifactId>weasis-dicom-viewer2d</artifactId>
  <packaging>jar</packaging>
  <name>DICOM - Viewer (2D and MPR) [${project.artifactId}]</name>

  <build>
    <plugins>
      <plugin>
        <groupId>biz.aQute.bnd</groupId>
        <artifactId>bnd-maven-plugin</artifactId>
        <configuration>
          <bnd>
            Export-Package:!org.weasis.dicom.viewer2d.internal,org.weasis.dicom.viewer2d.*
          </bnd>
        </configuration>
      </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>20</source>
                <target>20</target>
            </configuration>
        </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <groupId>org.weasis.dicom</groupId>
      <artifactId>weasis-dicom-explorer</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.weasis.dicom</groupId>
      <artifactId>weasis-dicom-codec</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.weasis.imageio</groupId>
      <artifactId>weasis-imageio-codec</artifactId>
      <version>${project.version}</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.joml</groupId>
      <artifactId>joml</artifactId>
    </dependency>
  </dependencies>
</project>